WinMFT related added

--- a/_posts/2021-07-21-IPoIB-40Gbps-2.md
+++ b/_posts/2021-07-21-IPoIB-40Gbps-2.md
@@ -18,6 +18,9 @@ MFT(Mellanox 어댑터 관리 툴) 를 설치하고 mlxup 을 이용하면 RDMA 
 ./mlxburn -dev mt26428_pci_cr0 -fw <Firmware>.mlx -conf <PSID>.ini
 ```
 
+윈도우에서는 WinMFT 버전이 너무 높으면 업그레이드시 오류가 발생하므로
+WinMFT 2.7.2 버전을 임시로 설치하고 진행해주면 된다.
+
 양쪽 컴퓨터 모두에서 업데이트를 해주면..
 
 ![RDMA](https://user-images.githubusercontent.com/34763810/126472500-4cf5cae6-d737-4639-bf77-81921e0c1e5b.png)
